initial config files

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,7 +13,7 @@
 [platformio]
 src_dir      = Marlin
 boards_dir   = buildroot/share/PlatformIO/boards
-default_envs = mega2560
+default_envs = STM32F103RE_btt
 include_dir  = Marlin
 extra_configs =
     ini/avr.ini
@@ -264,7 +264,7 @@ monitor_flags =
 # Just print the dependency tree
 #
 [env:include_tree]
-platform    = atmelavr
-board       = megaatmega2560
+platform    = ${common_stm32.platform}
+board       = genericSTM32F103RE
 build_flags = -c -H -std=gnu++11 -Wall -Os -D__MARLIN_FIRMWARE__
 src_filter  = +<src/MarlinCore.cpp>
